WIP: working on BOOM goes the mine-o-might

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="src/MineSweeper.js"></script>
+  <script src="src/MineSweeperDom.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/MineSweeperSpec.js"></script>
+  <script src="spec/MineSweeperDomSpec.js"></script>
 
 </head>
 
