Add mines accepts list of indices for placing mines

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -8,13 +8,11 @@
         <script src="src/MineSweeper.js"></script>
         <script src="src/MineSweeperDom.js"></script>
         <script>
-            let length = 1;
+            let length = 2;
             let board;
-            let cell;
 
             board = new Board(length);
-            cell = new Cell();
-            board.addCells(cell);
+            board.addCells(Cell);
             board.addMines();
             let Dom = new DomManipulation();
             Dom.init(board);
