adds full featured solution

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="src/MineSweeper.js"></script>
   <script src="src/MineSweeperDom.js"></script>
+  <script src="src/ListRandomizer.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/MineSweeperSpec.js"></script>
   <script src="spec/MineSweeperDomSpec.js"></script>
+  <script src="spec/ListRandomizerSpec.js"></script>
 
 </head>
 
