--- a/minesweeper.html
+++ b/minesweeper.html
@@ -7,18 +7,18 @@
     <body>
         <script src="src/MineSweeper.js"></script>
         <script src="src/MineSweeperDom.js"></script>
+        <script src="src/ListRandomizer.js"></script>
         <script>
-            let length = 3;
-            let board;
+            const length = 2;
+            const board = new Board(length);
+            const listRandomizer = new ListRandomizer();
+            const numberOfMines = 1;
 
-            board = new Board(length);
             board.addCells(Cell);
-            /*let arr = [];
-            while(arr.length < 1){
-                let r = Math.floor(Math.random()*length);
-                if(arr.indexOf(r) === -1) arr.push(r);
-            }*/
-            board.addMines([1]);
+
+            const mineIndices = listRandomizer.randomizeIndices(numberOfMines, length);
+
+            board.addMines(mineIndices);
             let Dom = new DomManipulation();
             Dom.init(board);
 
