WIP class getter attempt

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,6 +15,7 @@
   <script src="src/MineSweeper.js"></script>
   <script src="src/MineSweeperDom.js"></script>
   <script src="src/ListRandomizer.js"></script>
+  <script src="src/MineSweeperBoardModel.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/MineSweeperSpec.js"></script>
