--- a/minesweeper.html
+++ b/minesweeper.html
@@ -8,6 +8,7 @@
         <script src="src/MineSweeper.js"></script>
         <script src="src/MineSweeperDom.js"></script>
         <script src="src/ListRandomizer.js"></script>
+        <script src="src/MineSweeperBoardModel.js"></script>
         <script>
             const length = 9;
             const board = new Board(length);
